<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#33CC99"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/fanhui"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tv_friend_title"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="资料修改"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="提交"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <!-- 手机 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/res_tel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray" />
    <!-- 昵称 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/ni_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:focusable="true"
            android:gravity="right"
            android:singleLine="true"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray" />
    <!-- 密码 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/res_pwd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="right"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray" />
    
     <!-- 关注的作物 -->

    <RelativeLayout
        android:id="@+id/agriproduct"
       android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/str_agri_product_gz"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/expert_product"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:gravity="center"
             />

        <ImageView style="@style/my_linear_apply_text_choice_image" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray" />
    <!-- 头像 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="点击添加头像"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/head"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:scaleType="centerInside" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:src="@color/gray" />
   

</LinearLayout>